<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.qc.seclass.tipcalculator.TipCalculatorActivity"

    >

    <TextView
        android:text="@string/check_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkAmountTextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/checkAmountValue"
        android:layout_alignBottom="@+id/checkAmountValue"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/party_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/partySizetextView"
        android:layout_below="@+id/checkAmountValue"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <Button
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/buttonCompute"
        android:text="@string/compute_tip"
        android:textSize="18sp"
        android:layout_below="@+id/partySizeValue"
        android:layout_toEndOf="@+id/partySizetextView"
        android:elevation="0dp"
        android:onClick="computeTipClicked" />

    <TextView
        android:text="@string/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/tiptextView"
        android:layout_below="@+id/buttonCompute"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TextView
        android:text="@string/_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fifteentextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/tiptextView"
        android:layout_alignBottom="@+id/tiptextView"
        android:layout_toStartOf="@+id/buttonCompute" />

    <TextView
        android:text="@string/_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twentytextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/fifteenPercentTipValue"
        android:layout_alignBottom="@+id/fifteenPercentTipValue"
        android:layout_toEndOf="@+id/fifteenPercentTipValue" />

    <TextView
        android:text="@string/_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/twentytextView"
        android:layout_toEndOf="@+id/twentyPercentTipValue"
        android:id="@+id/twentyFivetextView"
        android:textSize="18sp" />

    <TextView
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fifteenPercentTipValue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/totaltextView"
        android:textSize="18sp" />

    <TextView
        android:text="@string/_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twentyTotaltextView"
        android:layout_alignBaseline="@+id/fifteenPercentTotalValue"
        android:layout_alignBottom="@+id/fifteenPercentTotalValue"
        android:layout_toEndOf="@+id/fifteenPercentTotalValue"
        android:textSize="18sp" />

    <TextView
        android:text="@string/_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twentyFivetotaltextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/twentyPercentTotalValue"
        android:layout_alignBottom="@+id/twentyPercentTotalValue"
        android:layout_toEndOf="@+id/twentyPercentTipValue" />

    <TextView
        android:text="@string/_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fifteenTotaltextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/totaltextView"
        android:layout_alignBottom="@+id/totaltextView"
        android:layout_toEndOf="@+id/totaltextView" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/checkAmountValue"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_alignBottom="@+id/partySizetextView"
        android:layout_alignParentEnd="true"
        android:id="@+id/partySizeValue"
        android:importantForAutofill="no" />

    <EditText
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:id="@+id/fifteenPercentTipValue"
        android:layout_alignBaseline="@+id/fifteentextView"
        android:layout_alignBottom="@+id/fifteentextView"
        android:layout_toEndOf="@+id/fifteentextView"
        android:textColor="@android:color/black"
        android:importantForAutofill="no" />

    <EditText
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_marginStart="10dp"
        android:layout_alignBaseline="@+id/twentyFivetextView"
        android:layout_alignBottom="@+id/twentyFivetextView"
        android:layout_toEndOf="@+id/twentyFivetextView"
        android:textColor="@android:color/black"
        android:importantForAutofill="no" />

    <EditText
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:layout_below="@+id/fifteenPercentTipValue"
        android:layout_toEndOf="@+id/fifteenTotaltextView"
        android:layout_marginTop="17dp"
        android:id="@+id/fifteenPercentTotalValue"
        android:textColor="@android:color/black"
        android:importantForAutofill="no" />

    <EditText
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:id="@+id/twentyPercentTotalValue"
        android:layout_alignBaseline="@+id/twentyTotaltextView"
        android:layout_alignBottom="@+id/twentyTotaltextView"
        android:layout_toEndOf="@+id/twentytextView"
        android:textColor="@android:color/black"
        android:importantForAutofill="no" />

    <EditText
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:id="@+id/twentyfivePercentTotalValue"
        android:selectAllOnFocus="false"
        android:layout_alignBaseline="@+id/twentyFivetotaltextView"
        android:layout_alignBottom="@+id/twentyFivetotaltextView"
        android:layout_alignStart="@+id/twentyfivePercentTipValue"
        android:textColor="@android:color/black"
        android:importantForAutofill="no" />

    <EditText
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:id="@+id/twentyPercentTipValue"
        android:layout_alignBaseline="@+id/twentytextView"
        android:layout_alignBottom="@+id/twentytextView"
        android:layout_toEndOf="@+id/twentytextView"
        android:textColor="@android:color/black"
        android:importantForAutofill="no" />

    <TextView
        android:text="@string/tips_and_totals_per_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipsAndTotaltextView"
        android:defaultFocusHighlightEnabled="false"
        android:textSize="24sp"
        android:layout_below="@+id/buttonCompute"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:textColor="@android:color/black" />

</RelativeLayout>